# 1541-rePico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: .devcontainer.json  devcontainer.json
.devcontainer/install/: build_openocd.sh  onCreateCommand.sh  picotool  postCreateCommand.sh
.github/workflows/: build.yml  code-analysis.yml  release.yml
doc/: pin-assignment.txt
firmware/: .gitmodules  CMakeLists.txt
firmware/FileSelector/: menu.prg
firmware/SoftwareC64/: CMakeLists.txt  dali  intro.prg  menu.asm  menu.prg
firmware/buildtools/: CMakeLists.txt
firmware/include/: Font_c64_ascii.h  display.h  gcr.h  globals.h  gui_constants.h  i2c.h  lcd.h  main.h  menu.h  menu_image.h  mymenu.h  oled.h  pinout.h  rw_routines.h  version.h
firmware/src/: 1541-rePipico.c  display.c  gcr.c  globals.c  hw_config.c  i2c.c  lcd.c  main.c  menu.c  menu_image.c  oled.c  quadrature_encoder.pio  rw_routines.c
hardware/: 1541-rePico.kicad_pcb  1541-rePico.kicad_prl  1541-rePico.kicad_pro  1541-rePico.kicad_sch  SN74LVC4245A.kicad_sym  bss138.kicad_sch  sym-lib-table  via6522_sockel.kicad_sch
tools/: README.md  analyze.sh  conv_x64.c  datastruct.h  generate_report.py  rw_tracks.c  rw_tracks.h
